Merging revisions from r16175 to  r16243 from OpenClinica-3.1.1-CCHMC