@@ -29,7 +29,7 @@ import javax.sql.DataSource;
  * @author thickerson
  * 
  */
-public class CRFDAO extends AuditableEntityDAO {
+public class CRFDAO<K extends String,V extends ArrayList> extends AuditableEntityDAO {
     // private DataSource ds;
     // private DAODigester digester;
 
@@ -66,12 +66,12 @@ public class CRFDAO extends AuditableEntityDAO {
     public EntityBean update(EntityBean eb) {
         CRFBean cb = (CRFBean) eb;
         HashMap variables = new HashMap();
-        variables.put(new Integer(1), new Integer(cb.getStatus().getId()));
-        // variables.put(new Integer(2), cb.getLabel());
-        variables.put(new Integer(2), cb.getName());
-        variables.put(new Integer(3), cb.getDescription());
-        variables.put(new Integer(4), new Integer(cb.getUpdater().getId()));
-        variables.put(new Integer(5), new Integer(cb.getId()));
+        variables.put(Integer.valueOf(1), Integer.valueOf(cb.getStatus().getId()));
+        // variables.put(Integer.valueOf(2), cb.getLabel());
+        variables.put(Integer.valueOf(2), cb.getName());
+        variables.put(Integer.valueOf(3), cb.getDescription());
+        variables.put(Integer.valueOf(4), Integer.valueOf(cb.getUpdater().getId()));
+        variables.put(Integer.valueOf(5), Integer.valueOf(cb.getId()));
         this.execute(digester.getQuery("update"), variables);
         return eb;
     }
@@ -79,12 +79,12 @@ public class CRFDAO extends AuditableEntityDAO {
     public EntityBean create(EntityBean eb) {
         CRFBean cb = (CRFBean) eb;
         HashMap variables = new HashMap();
-        variables.put(new Integer(1), new Integer(cb.getStatus().getId()));
-        // variables.put(new Integer(2), cb.getLabel());
-        variables.put(new Integer(2), cb.getName());
-        variables.put(new Integer(3), cb.getDescription());
-        variables.put(new Integer(4), new Integer(cb.getOwner().getId()));
-        variables.put(new Integer(5), getValidOid(cb, cb.getName()));
+        variables.put(Integer.valueOf(1), Integer.valueOf(cb.getStatus().getId()));
+        // variables.put(Integer.valueOf(2), cb.getLabel());
+        variables.put(Integer.valueOf(2), cb.getName());
+        variables.put(Integer.valueOf(3), cb.getDescription());
+        variables.put(Integer.valueOf(4), Integer.valueOf(cb.getOwner().getId()));
+        variables.put(Integer.valueOf(5), getValidOid(cb, cb.getName()));
         // am i the only one who runs their daos' unit tests after I change
         // things, tbh?
         this.execute(digester.getQuery("create"), variables);
@@ -129,7 +129,7 @@ public class CRFDAO extends AuditableEntityDAO {
     public Collection findAllByStudy(int studyId) {
         this.setTypesExpected();
         HashMap variables = new HashMap();
-        variables.put(new Integer(1), new Integer(studyId));
+        variables.put(Integer.valueOf(1), Integer.valueOf(studyId));
         ArrayList alist = this.select(digester.getQuery("findAllByStudy"), variables);
         ArrayList al = new ArrayList();
 
@@ -162,7 +162,7 @@ public class CRFDAO extends AuditableEntityDAO {
     public Collection findAllByStatus(Status status) {
         this.setTypesExpected();
         HashMap variables = new HashMap();
-        variables.put(new Integer(1), new Integer(status.getId()));
+        variables.put(Integer.valueOf(1), Integer.valueOf(status.getId()));
         ArrayList alist = this.select(digester.getQuery("findAllByStatus"), variables);
 
         ArrayList al = new ArrayList();
@@ -177,7 +177,7 @@ public class CRFDAO extends AuditableEntityDAO {
     public Collection findAllActiveByDefinition(StudyEventDefinitionBean definition) {
         this.setTypesExpected();
         HashMap variables = new HashMap();
-        variables.put(new Integer(1), new Integer(definition.getId()));
+        variables.put(Integer.valueOf(1), Integer.valueOf(definition.getId()));
         ArrayList alist = this.select(digester.getQuery("findAllActiveByDefinition"), variables);
 
         ArrayList al = new ArrayList();
@@ -192,8 +192,8 @@ public class CRFDAO extends AuditableEntityDAO {
     public Collection findAllActiveByDefinitions(int studyId) {
         this.setTypesExpected();
         HashMap variables = new HashMap();
-        variables.put(new Integer(1), new Integer(studyId));
-        variables.put(new Integer(2), new Integer(studyId));
+        variables.put(Integer.valueOf(1), Integer.valueOf(studyId));
+        variables.put(Integer.valueOf(2), Integer.valueOf(studyId));
         ArrayList alist = this.select(digester.getQuery("findAllActiveByDefinitions"), variables);
 
         ArrayList al = new ArrayList();
@@ -216,7 +216,7 @@ public class CRFDAO extends AuditableEntityDAO {
         this.setTypesExpected();
 
         HashMap variables = new HashMap();
-        variables.put(new Integer(1), new Integer(ID));
+        variables.put(Integer.valueOf(1), Integer.valueOf(ID));
 
         // String sql = digester.getQuery("findByPK");
         // logger.warn("found findbypk query: "+sql);
@@ -234,7 +234,7 @@ public class CRFDAO extends AuditableEntityDAO {
         this.setTypesExpected();
 
         HashMap variables = new HashMap();
-        variables.put(new Integer(1), itemOid);
+        variables.put(Integer.valueOf(1), itemOid);
 
         ArrayList alist = this.select(digester.getQuery("findByItemOid"), variables);
         Iterator it = alist.iterator();
@@ -250,7 +250,7 @@ public class CRFDAO extends AuditableEntityDAO {
         this.setTypesExpected();
 
         HashMap variables = new HashMap();
-        variables.put(new Integer(1), name);
+        variables.put(Integer.valueOf(1), name);
 
         String sql = digester.getQuery("findByName");
         ArrayList alist = this.select(sql, variables);
@@ -267,8 +267,8 @@ public class CRFDAO extends AuditableEntityDAO {
         this.setTypesExpected();
 
         HashMap variables = new HashMap();
-        variables.put(new Integer(1), name);
-        variables.put(new Integer(2), new Integer(crfId));
+        variables.put(Integer.valueOf(1), name);
+        variables.put(Integer.valueOf(2), Integer.valueOf(crfId));
 
         String sql = digester.getQuery("findAnotherByName");
         ArrayList alist = this.select(sql, variables);
@@ -299,7 +299,7 @@ public class CRFDAO extends AuditableEntityDAO {
         this.setTypesExpected();
 
         HashMap variables = new HashMap();
-        variables.put(new Integer(1), new Integer(crfVersionId));
+        variables.put(Integer.valueOf(1), Integer.valueOf(crfVersionId));
 
         String sql = digester.getQuery("findByVersionId");
         ArrayList rows = select(sql, variables);
@@ -337,7 +337,7 @@ public class CRFDAO extends AuditableEntityDAO {
     @SuppressWarnings("unchecked")
     public ArrayList<CRFBean> findAllByOid(String oid) {
         HashMap<Integer, String> variables = new HashMap<Integer, String>();
-        variables.put(new Integer(1), oid);
+        variables.put(Integer.valueOf(1), oid);
 
         return executeFindAllQuery("findByOID", variables);
     }
@@ -348,7 +348,7 @@ public class CRFDAO extends AuditableEntityDAO {
         setTypesExpected();
 
         HashMap variables = new HashMap();
-        variables.put(new Integer(1), oid);
+        variables.put(Integer.valueOf(1), oid);
         String sql = digester.getQuery("findByOID");
 
         ArrayList rows = this.select(sql, variables);
